--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,5 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "rules": {
-  }
+  "rules": { "react/no-unescaped-entities": 0 }
 }
